Fix the java version error